--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Jerick Portfolio</title>
+  <title>John Agdol Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -22,12 +22,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: DevFolio - v4.9.1
-  * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body>
@@ -36,7 +30,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">Je Acbdo</a></h1>
+      <h1 class="logo"><a href="index.html">John Agdol</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -61,8 +55,8 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="hero-title mb-4">I am Jerick Acabado</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="UI/UX Designer,Graphic Designer, Developer"></span></p>
+          <h1 class="hero-title mb-4">I am John Amiel Agdol</h1>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Graphic Designer, Artist"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -87,14 +81,14 @@
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Name: </span> <span>Jerick Acabado</span></p>
-                        <p><span class="title-s">Profile: </span> <span>UI/UX Designer</span></p>
-                        <p><span class="title-s">Email: </span> <span>acabadojerick2@gmail.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>(+63)905 824 1348</span></p>
+                        <p><span class="title-s">Name: </span> <span>John Amiel Agdol</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Graphic Designer</span></p>
+                        <p><span class="title-s">Email: </span> <span>amieljune@gmail.com</span></p>
+                        <p><span class="title-s">Phone: </span> <span>(+63)912 3456 789</span></p>
                       </div>
                     </div>
                   </div>
-                  <div class="skill-mf">
+                  <!--<div class="skill-mf">
                     <p class="title-s">Skill</p>
   
                     <span>Adobe Photoshop</span> <span class="pull-right">65%</span>
@@ -113,7 +107,7 @@
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
-                  </div>
+                  </div>-->
                 </div>
                 <div class="col-md-6">
                   <div class="about-me pt-4 pt-md-0">
