--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/hero-bg-1.jpg)">
+  <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/bg-bg.png)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
@@ -76,20 +76,26 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                        <img src="assets/img/cover_bg_3.jpg" class="img-fluid rounded b-shadow-a" alt="">
                       </div>
                     </div>
-                    <div class="col-sm-6 col-md-7">
+                    <!--<div class="col-sm-6 col-md-7">
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>John Amiel Agdol</span></p>
                         <p><span class="title-s">Profile: </span> <span>Graphic Designer</span></p>
                         <p><span class="title-s">Email: </span> <span>amieljune@gmail.com</span></p>
                         <p><span class="title-s">Phone: </span> <span>(+63)912 3456 789</span></p>
                       </div>
-                    </div>
+                    </div>-->
                   </div>
-                  <!--<div class="skill-mf">
-                    <p class="title-s">Skill</p>
+                  <div class="skill-mf">
+                     <div class="about-info">
+                        <p><span class="title-s">Name: </span> <span>John Amiel Agdol</span></p>
+                        <p><span class="title-s">Profile: </span> <span>Graphic Designer</span></p>
+                        <p><span class="title-s">Email: </span> <span>amieljune@gmail.com</span></p>
+                        <p><span class="title-s">Phone: </span> <span>(+63)912 3456 789</span></p>
+                      </div>
+                    <!--<p class="title-s">Skill</p>
   
                     <span>Adobe Photoshop</span> <span class="pull-right">65%</span>
                     <div class="progress">
@@ -106,8 +112,8 @@
                     <span>Figma</span> <span class="pull-right">80%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>-->
+                    </div>--><p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Download My CV</a></p> 
+                  </div>
                 </div>
                 <div class="col-md-6">
                   <div class="about-me pt-4 pt-md-0">
@@ -135,13 +141,14 @@
                   </div>
                 </div>
               </div>
+              
             </div>
           </div>
         </div>
       </div>
     </section><!-- End About Section -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Services Section 
     <section id="services" class="services-mf pt-5 route">
       <div class="container">
         <div class="row">
@@ -250,9 +257,9 @@
           </div>
         </div>
       </div>
-    </section><!-- End Services Section -->
+    </section> End Services Section -->
 
-    <!-- ======= Counter Section ======= -->
+    <!-- ======= Counter Section 
     <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counter-bg-bg.jpg)">
       <div class="overlay-mf"></div>
       <div class="container position-relative">
@@ -303,7 +310,7 @@
           </div>
         </div>
       </div>
-    </div><!-- End Counter Section -->
+    </div> End Counter Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="work" class="portfolio-mf sect-pt4 route">
@@ -472,7 +479,7 @@
       </div>
     </section><!-- End Portfolio Section -->
 
-    <!-- ======= Testimonials Section ======= -->
+    <!-- ======= Testimonials Section 
     <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
       <div class="overlay-mf"></div>
       <div class="container">
@@ -495,9 +502,9 @@
                       </p>
                     </div>
                   </div>
-                </div><!-- End testimonial item -->
+                </div> End testimonial item -->
 
-                <div class="swiper-slide">
+               <!-- <div class="swiper-slide">
                   <div class="testimonial-box">
                     <div class="author-test">
                       <img src="assets/img/testimonial-4.jpg" alt="" class="rounded-circle b-shadow-a">
@@ -511,7 +518,7 @@
                     </div>
                   </div>
                 </div><!-- End testimonial item -->
-              </div>
+             <!--- </div>
               <div class="swiper-pagination"></div>
             </div>
 
