--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#work">Work</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -708,15 +706,15 @@
                         mollitia inventore?
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> Block 27, Lot 8, Phase 1, Golden City, Dasma 1, Salawag, Dasmarinas, Cavite</li>
-                        <li><span class="bi bi-phone"></span> (+63)905 824 1348</li>
-                        <li><span class="bi bi-envelope"></span> acabadojerick2@gmai.com</li>
+                        <li><span class="bi bi-geo-alt"></span> Block 3 Lot 63 Dollar street, Summerhills,Molino 4, Bacoor, Cavite</li>
+                        <li><span class="bi bi-phone"></span> (+63)912 345 6789</li>
+                        <li><span class="bi bi-envelope"></span> amieljune@gmai.com</li>
                       </ul>
                     </div>
                     <div class="socials">
                       <ul>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
+                        <li><a href="https://www.instagram.com/vvv.whyachtarts.co/"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                       </ul>
