--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <span>Figma</span> <span class="pull-right">80%</span>
                     <div class="progress">
                       <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>--><p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Download My CV</a></p> 
+                    </div>--><p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="assets/img/JohnCV.pdf" role="button">Download My CV</a></p> 
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -643,7 +643,7 @@
     </section><!-- End Blog Section -->
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
+    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/pic-1.png)">
       <div class="overlay-mf"></div>
       <div class="container">
         <div class="row">
@@ -736,7 +736,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>JerFolio</strong>. All Rights Reserved</p>
+            <p class="copyright">&copy; Copyright <strong>JeFolio</strong>. All Rights Reserved</p>
             <div class="credits">
               <!--
               All the links in the footer should remain intact.
@@ -744,7 +744,7 @@
               Licensing information: https://bootstrapmade.com/license/
               Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=DevFolio
             -->
-              Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+              Designed by <a href="">tryseartwork</a>
             </div>
           </div>
         </div>
