--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
+          <li><a class="nav-link scrollto active" href="#work">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -72,9 +73,12 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="row">
-                    <div class="col-sm-6 col-md-5">
+                    <div class="col-sm-15 col-md-10">
                       <div class="about-img">
+                        <figure class="dotted-bg gsap-reveal-img ">
                         <img src="assets/img/cover_bg_3.jpg" class="img-fluid rounded b-shadow-a" alt="">
+                      </figure>
+                        
                       </div>
                     </div>
                     <!--<div class="col-sm-6 col-md-7">
@@ -91,7 +95,7 @@
                         <p><span class="title-s">Name: </span> <span>John Amiel Agdol</span></p>
                         <p><span class="title-s">Profile: </span> <span>Graphic Designer</span></p>
                         <p><span class="title-s">Email: </span> <span>amieljune@gmail.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>(+63)912 3456 789</span></p>
+                        <p><span class="title-s">Phone: </span> <span> (+63)912 3456 789</span></p>
                       </div>
                     <!--<p class="title-s">Skill</p>
   
@@ -108,9 +112,9 @@
                       <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                     </div>
                     <span>Figma</span> <span class="pull-right">80%</span>
-                    <div class="progress">
+                    <div class="progress"><button type="button" class="btn btn-outline-secondary">Secondary</button>
                       <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>--><p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="assets/img/JohnCV.pdf" role="button">Download My CV</a></p> 
+                    </div>-->
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -135,7 +139,8 @@
                       Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
                       Nulla porttitor accumsan
                       tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
-                    </p>
+                    </p><br></br>
+                    <p class="pt-3"><a class="btn btn-outline-secondary btn js-scroll px-4" href="assets/img/JohnCV.pdf" role="button">Download My CV</a></p> 
                   </div>
                 </div>
               </div>
@@ -145,6 +150,7 @@
         </div>
       </div>
     </section><!-- End About Section -->
+   
 
     <!-- ======= Services Section 
     <section id="services" class="services-mf pt-5 route">
