--- a/index.html
+++ b/index.html
@@ -125,21 +125,20 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                      imperdiet et, porttitor
-                      at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                      porttitor accumsan tincidunt.
+                      To acquire position and career in a company with
+                     opportunities for professional growth;
                     </p>
                     <p class="lead">
-                      Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                      porttitor volutpat. Vestibulum
-                      ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                      Where I can apply my
+                      skills and qualifications to fully meet the objectives to
+                      company and also for organizational development.
                     </p>
-                    <p class="lead">
+                    <!--<p class="lead">
                       Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
                       Nulla porttitor accumsan
                       tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
-                    </p><br></br>
+                    </p>--><br></br>
+                    <br></br>
                     <p class="pt-3"><a class="btn btn-outline-secondary btn js-scroll px-4" href="assets/img/JohnCV.pdf" role="button">Download My CV</a></p> 
                   </div>
                 </div>
