--- a/artwork.htm
+++ b/artwork.htm
@@ -129,16 +129,16 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Logo/Acrylic Poster Design</li>  
-                <li><strong>Client</strong>: JZ Dental Clinic</li>
-                <li><strong>Project date</strong>: 16 December, 2021</li>
+                <li><strong>Category</strong>: Passion Project</li>  
+                <!--<li><strong>Client</strong>: </li>-->
+                <li><strong>Project date</strong>: 20 April, 2022</li>
                <!-- <li><strong>Project URL</strong>: <a href="#"></a></li>-->
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>This is the outcome project</h2>
               <p>
-                Dr. Saniel And Dr. Joan Joson was ecstatic with the official logo and poster design for her dental clinic. After making changes to the initial design concept, the logo was intensively worked on to achieve the proper balance and effect. 
+                The result of my eagerness to enhance my creativity and passion during free time. I usually dedicate my vacant time to explore my ideas and turn into something useful in the form of digital art.    
               </p>
             </div>
           </div>
