--- a/pomade-tryse.html
+++ b/pomade-tryse.html
@@ -128,10 +128,10 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>This is the outcome project</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
-              </p>
+                commission by my friendly clients in tryse ph 
+                crafted design that suits to thier desire               </p>
             </div>
           </div>
 
