--- a/tnhs.html
+++ b/tnhs.html
@@ -72,12 +72,12 @@
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h2 class="hero-title mb-4">TNHS Classroom Officer List</h2>
+          <h2 class="hero-title mb-4">TNCSHS Classroom Officer List</h2>
           <ol class="breadcrumb d-flex justify-content-center">
             <li class="breadcrumb-item">
               <a href="index.html">Home</a>
             </li>
-            <li class="breadcrumb-item active">TNHS Classroom Officer List Details </li>
+            <li class="breadcrumb-item active">TNCSHS Classroom Officer List Details </li>
           </ol>
         </div>
       </div>
@@ -110,17 +110,16 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Logo/Acrylic Poster Design</li>  
-                <li><strong>Client</strong>: JZ Dental Clinic</li>
-                <li><strong>Project date</strong>: 16 December, 2021</li>
+                <li><strong>Category</strong>:  Tarpulin Design</li>  
+                <li><strong>Client</strong>: Ma Andrea R, Viray</li>
+                <li><strong>Project date</strong>: 7 May, 2022</li>
                <!-- <li><strong>Project URL</strong>: <a href="#"></a></li>-->
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>This is the outcome project</h2>
               <p>
-                Dr. Saniel And Dr. Joan Joson was ecstatic with the official logo and poster design for her dental clinic. After making changes to the initial design concept, the logo was intensively worked on to achieve the proper balance and effect. 
-              </p>
+                Commission tarp layout for Ms. Ma Andrea R. Viray. It is said to be used as visual guide for the students, teachers and parents of Tanza National Comprehensive Senior High School.              </p>
             </div>
         </div>
 
